<resources>
    <string name="app_name">Give Me My Money</string>
    <string name="save">Sauvegarder</string>
    <string name="no_debt">Aucune réclamation à faire</string>
    <string name="Date">Date</string>
    <string name="identite">Pseudo</string>
    <string name="title_activity_splash">GiveMeMyMoney</string>

    <string name="title">Give me my money</string>
    <string name="please">Please</string>
    <string name="loginbtn">Se connecter</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_profile">Profil</string>
    <string name="bottom_navigation_menu_add_debt">Ajouter</string>
    <string name="bottom_navigation_menu_list_debt">Liste</string>


    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="sign_up">S\'inscrire ?</string>
    <string name="error">Email ou mot de passe incorrect</string>
    <string name="signup">s\'inscrire</string>
    <string name="password_confirmation">Confirmer mot de passe</string>
    <string name="pseudo">Pseudo</string>
    <string name="error_login">Email ou mot de passe incorrect</string>
    <string name="error_sign_up">Email déjà utilisé</string>
    <string name="log_out">Déconnexion</string>
    <string name="email_error">Veuillez rentrer une email valide</string>
    <string name="password_error">Mot de passe non identiques</string>
    <string name="birthday_user">date de naissance</string>
    <string name="email_user">Email</string>
    <string name="debt_reason">Raison</string>
    <string name="debt_amount">0€</string>
    <string name="adding_debt_error">Une dette a besoin d\'un nom</string>


    <!--ADS-->
    <string name="banner_ad_unit_id_first">ca-app-pub-1745806143462700/7118793808</string>
    <string name="banner_ad_unit_id_second">ca-app-pub-1745806143462700/3433101178</string>
    <string name="name">Nom</string>
    <string name="devise">Devise</string>
    <string name="theme_color">Theme</string>


</resources>
